--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href='./images/cookbook.png'/>;
     <link rel="icon" href='./images/seasoning.png'/>;
     <link rel="icon" href="./images/apple-logo-outline.png"/>
+    <link rel="icon" href="./images/shopping-cart-icon.png"/>
   </head>
   <body>
     <header>
@@ -20,6 +21,7 @@
         <label for="search-input" class="search-label">Search</label>
         <button class="nav-btn search-btn" type="button" name="button"><img src="./images/search.png" alt="search button"></button>
       </form>
+      <button class="nav-btn my-list-btn ing-pan-btn" type="button" name="button"><img src="./images/shopping-cart-icon.png" alt="shopping List button">Shopping List</button>
       <button class="nav-btn ing-pan-btn saved-recipes-btn" type="button" name="button"><img src="./images/cookbook.png" alt="search button">My Recipes</button>
       <button class="nav-btn my-pantry-btn ing-pan-btn saved-ingredients-btn" type="button" name="button"><img src="./images/seasoning.png" alt="search button">My Pantry</button>
     </header>
@@ -29,7 +31,12 @@
         <button class="show-all-btn">Show All Recipes</button>
       </section>
     </section>
-    <section class="drop-menu">
+    <section class="shopping-list hidden">
+      <h2>Shopping List</h2>
+      <button class="buy-btn">Buy from AmazonFRESH</button>
+      <ul class="buy-ingredient-list"></ul>
+    </section>
+    <section class="drop-menu hidden">
       <h2>My Pantry</h2>
       <button class="show-pantry-recipes-btn">What Can I Make that includes...?</button>
       <ul class="pantry-list"></ul>
