Create button to add recipe to users recipeToCook array.

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,8 @@
     </section>
     <section class="shopping-list hidden">
       <h2>Shopping List</h2>
-      <button class="buy-btn">Buy from AmazonFRESH</button>
+      <button id="buy-btn">Buy from AmazonFRESH</button>
+      <button id="buy-user-list-btn">Buy Everything Needed to make current Recipes</button>
       <ul class="buy-ingredient-list"></ul>
     </section>
     <section class="drop-menu hidden">
@@ -60,5 +61,5 @@
       </section>
     </main>
   </body>
-  <script type="text/javascript" src='../dist/bundle.js'/>
+  <!-- <script type="text/javascript" src='../dist/main.bundle.js'/> -->
 </html>
