Begin to create mobile version of app

--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="description" content="A website that collects recipes to eventually cook and store in a pantry that is full of ingredients.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fresh Picks</title>
     <link rel="stylesheet" type="text/scss" href="./css/index.scss">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sulphur+Point:400,700&display=swap" rel="stylesheet">
-    <link rel="icon" href="./images/apple-logo.png" />
-    <link rel="icon" href="./images/search.png" />
-    <link rel="icon" href='./images/cookbook.png'/>;
-    <link rel="icon" href='./images/seasoning.png'/>;
-    <link rel="icon" href="./images/apple-logo-outline.png"/>
-    <link rel="icon" href="./images/shopping-cart-icon.png"/>
+    <link rel="icon" href="./images/apple-logo.png" alt="image of an apple"/>
+    <link rel="icon" href="./images/search.png" alt="image of a magnifying glass"/>
+    <link rel="icon" href="./images/cookbook.png" alt="image of a cookbook"/>;
+    <link rel="icon" href="./images/seasoning.png" alt="image of a list"/>;
+    <link rel="icon" href="./images/apple-logo-outline.png" alt="outline image of an apple"/>
+    <link rel="icon" href="./images/shopping-cart-icon.png" alt="image of a shopping cart"/>
+    <link rel="icon" href="./images/menu.png"/>
   </head>
-  <body>
+  <body role="main">
     <header>
       <h1><span>fresh</span>Picks<img src="./images/apple-logo.png" alt="apple icon" class="header-apple-icon"></h1>
       <form id="search" role="search">
         <label for="search-input" class="search-label">
           Search
-          <input id="search-input" type="text" autocomplete="off" placeholder="Search Recipes..."></input>
+          <input id="search-input" type="text" autocomplete="off" placeholder="Search Recipes..." role="searchbox"></input>
         </label>
         <button class="nav-btn search-btn" type="button" name="button"><img src="./images/search.png" alt="search button"></button>
       </form>
       <button class="nav-btn my-list-btn ing-pan-btn" type="button" name="button"><img src="./images/shopping-cart-icon.png" alt="shopping List button">Shopping List</button>
       <button class="nav-btn ing-pan-btn saved-recipes-btn" type="button" name="button"><img src="./images/cookbook.png" alt="search button">My Recipes</button>
       <button class="nav-btn my-pantry-btn ing-pan-btn saved-ingredients-btn" type="button" name="button"><img src="./images/seasoning.png" alt="search button">My Pantry</button>
+      <button class="hamburger" type="button"><img src="./images/menu.png"></button>
     </header>
     <section class="banner-image">
       <section class="my-recipes-banner">
@@ -44,7 +47,7 @@
       <ul class="pantry-list"></ul>
     </section>
     <aside>
-      <section class="wrap">
+      <section class="recipe-type-bar">
         <h2>Recipe Type</h2>
         <ul class="tag-list">
         </ul>
