--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,12 @@
         <button class="nav-btn search-btn" type="button" name="button"><img src="./images/search.png" alt="search button"></button>
       </form>
       <!-- //when the screen reader reads an aria label it will read it instead of (for example the text on a button) -->
+      <div class="nav-buttons"
       <button class="nav-btn my-list-btn ing-pan-btn" type="button" name="button"><img src="./images/shopping-cart-icon.png" alt="shopping List button">Shopping List</button>
       <button class="nav-btn ing-pan-btn saved-recipes-btn" type="button" name="button"><img src="./images/cookbook.png" alt="search button">My Recipes</button>
       <button class="nav-btn my-pantry-btn ing-pan-btn saved-ingredients-btn" type="button" name="button"><img src="./images/seasoning.png" alt="search button">My Pantry</button>
-      <button class="hamburger" type="button"><img src="./images/menu.png"></button>
+      </div>
+      <!-- <button class="hamburger" type="button" name="button"><img src="./images/menu.png" alt="drop down menu"></button> -->
     </header>
     <section class="banner-image">
       <section class="my-recipes-banner">
