--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
       <h1><span>fresh</span>Picks<img src="./images/apple-logo.png" alt="apple icon" class="header-apple-icon"></h1>
       <form id="search" role="search">
         <label for="search-input" class="search-label">
-          Search
-          <input id="search-input" type="text" autocomplete="off" placeholder="Search Recipes..." role="searchbox"></input>
+          <input id="search-input" type="text" autocomplete="off" placeholder="Search Recipes..." role="searchbox">
+        </input>
         </label>
         <button class="nav-btn search-btn" type="button" name="button"><img src="./images/search.png" alt="search button"></button>
       </form>
