--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" href="./images/apple-logo-outline.png" alt="outline image of an apple"/>
     <link rel="icon" href="./images/shopping-cart-icon.png" alt="image of a shopping cart"/>
     <link rel="icon" href="./images/menu.png"/>
+    <link rel="icon" href='./images/down-arrow.png'/>
   </head>
   <body role="main" aria-label="">
     <header>
