Add Toggle Function for tagList search in mobile view.

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
       <ul class="pantry-list"></ul>
     </section>
     <aside>
-      <section class="recipe-type-bar">
+      <section class="recipe-type-bar mobile-hidden">
         <h2>Recipe Type</h2>
         <ul class="tag-list">
         </ul>
