--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,15 @@
     <link rel="icon" href="./images/seasoning.png" alt="image of a list"/>
     <link rel="icon" href="./images/apple-logo-outline.png" alt="outline image of an apple"/>
     <link rel="icon" href="./images/shopping-cart-icon.png" alt="image of a shopping cart"/>
-    <link rel="icon" href="./images/menu.png"/>
-    <link rel="icon" href='./images/down-arrow.png'/>
+    <link rel="icon" href='./images/down-arrow.png' alt="down arrow menu icon"/>
   </head>
   <body role="main" aria-label="">
     <header>
       <h1><span>fresh</span>Picks<img src="./images/apple-logo.png" alt="apple icon" class="header-apple-icon"></h1>
       <form id="search" role="search">
-        <label for="search-input" class="search-label">
-          <input id="search-input" type="text" autocomplete="off" placeholder="Search Recipes..." role="searchbox">
+        <label id="search-area" for="search-input" class="search-label">
+          <label id="lbl-main-menu-mob"></label>
+          <input id="search-input" type="text" autocomplete="off" placeholder="Search Recipes..." role="searchbox" name="search-input">
         </input>
         </label>
         <button class="nav-btn search-btn" type="button" name="button"><img src="./images/search.png" alt="search button"></button>
