Add Cost display to shopping list

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
       <h2>Shopping List</h2>
       <button id="buy-btn">Buy from AmazonFRESH</button>
       <button id="buy-user-list-btn">Buy Everything Needed to make current Recipes</button>
+      <h3 class="total-cost"></h3>
       <ul class="buy-ingredient-list"></ul>
     </section>
     <section class="drop-menu hidden">
@@ -74,6 +75,5 @@
         <button class="show-all-btn">Show All Recipes</button>
       </section>
     </main>
-  </body>
-  <!-- <script type="text/javascript" src='../dist/main.bundle.js'/> -->
+  </body
 </html>
