Lowered Import media queries in SCSS

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="icon" href="./images/seasoning.png" alt="image of a list"/>
     <link rel="icon" href="./images/apple-logo-outline.png" alt="outline image of an apple"/>
     <link rel="icon" href="./images/shopping-cart-icon.png" alt="image of a shopping cart"/>
-    <link rel="icon" href='./images/down-arrow.png' alt="down arrow menu icon"/>
+    <link rel="icon" href='./images/down_arrow.png' alt="down arrow menu icon"/>
   </head>
   <body role="main" aria-label="">
     <header>
